--- a/index.html
+++ b/index.html
@@ -4,85 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dante's GitHub Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome for icons -->
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f2f2f2;
+            background-color: #def2f1; /* Light blue-green background */
+            color: #333; /* Dark text color */
         }
-        .container {
-            width: 1920px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        header {
+            background-color: #1abc9c; /* Green header */
+            color: #fff;
+            padding: 20px 0;
             text-align: center;
         }
-        h1 {
-            color: #333;
+        header h1 {
+            font-size: 2.5em;
+            margin: 0;
         }
-        p {
-            line-height: 1.6;
-            color: #666;
-        }
-        .button-container {
+        nav {
+            background-color: #34495e; /* Dark blue navigation bar */
             text-align: center;
-            margin-bottom: 20px;
+            padding: 10px 0;
         }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
+        nav a {
+            margin: 0 20px;
             color: #fff;
             text-decoration: none;
+            font-size: 1.2em;
+        }
+        section {
+            padding: 50px 0;
+            text-align: center;
+        }
+        section h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+            color: #2c3e50; /* Dark blue heading */
+        }
+        section p {
+            font-size: 1.1em;
+            line-height: 1.6;
+            color: #555; /* Dark gray text */
+        }
+        .project-image {
+            max-width: 100%;
+            margin-bottom: 20px;
+        }
+        .btn {
+            background-color: #3498db; /* Blue button color */
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
             border-radius: 5px;
-            transition: background-color 0.3s ease;
-            margin: 0 10px;
-            cursor: pointer; /* Add cursor pointer */
+            text-decoration: none;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
-        .button:hover {
-            background-color: #0056b3;
+        .btn:hover {
+            background-color: #2980b9; /* Darker blue on hover */
         }
-        .divider {
-            width: 100%;
-            height: 1px;
-            background-color: #ddd;
-            margin: 20px -20px;
+        footer {
+            background-color: #2c3e50; /* Dark blue footer */
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
         }
     </style>
 </head>
 <body>
 
-<div class="container">
+<header>
     <h1>Welcome to Dante's GitHub Page!</h1>
-    <div class="divider"></div>
-    <div class="button-container">
-        <a href="#about" class="button">About Me</a>
-        <a href="#projects" class="button">Projects</a>
-    </div>
-    <p>This is a placeholder page. You can customize it to showcase your projects, bio, or any other information you'd like to share.</p>
-    <p>Feel free to edit this <code>index.html</code> file to personalize your page.</p>
-    <div id="about">
-        <h2>About Me</h2>
-        <p>Add your information about yourself here.</p>
-    </div>
-    <br>
-    <div id="projects">
-        <h2>Projects</h2>
-        <p>Add information about your projects here.</p>
-        <!-- JavaScript to handle redirection -->
-        <button class="button" onclick="redirectToProject()">10 mil juego</button>
-    </div>
-</div>
+</header>
 
-<script>
-    function redirectToProject() {
-        // Redirect to the GitHub project page
-        window.location.href = "https://daantesiito.github.io/10-mil-juego";
-    }
-</script>
+<nav>
+    <a href="index.html"><i class="fas fa-home"></i> Home</a>
+    <a href="aboutme.html"><i class="fas fa-user"></i> About Me</a>
+    <a href="projects.html"><i class="fas fa-envelope"></i> Projectos</a>
+</nav>
+
+<section id="about">
+    <h2>About Me</h2>
+    <p>Mi nombre es Dante Puddu, tengo 19 años y estudio Licenciatura en Informatica y Analista en tecnologias de la informacion y la comunicacion. Actualmente estoy en 2do año.
+</p>
+</section>
+
+<section id="projectos">
+    <h2>Projectos</h2>
+    <img src="https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/images/10milJuegoSS.png" alt="Project Image" class="project-image">
+    <p>Juego de dados el cual se tiran 5 dados, los unicos dados que suman puntos son el 5 (50 puntos) y el 1 (100 puntos).
+        El primero de todos los jugadores que llegue a 10000 puntos gana el juego.</p>
+    <a href="https://daantesiito.github.io/10-mil-juego" class="btn">10 Mil Juego</a>
+</section>
+
+<footer>
+    <p>&copy; 2024 Dante's Beach Page. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
