arreglando la interfaz

--- a/projects.html
+++ b/projects.html
@@ -64,8 +64,8 @@
 
 <nav>
     <a href="index.html"><i class="fas fa-home"></i> Home</a>
-    <a href="about.html"><i class="fas fa-user"></i> About Me</a>
-    <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+    <a href="aboutme.html"><i class="fas fa-user"></i> About Me</a>
+    <a href="projects.html"><i class="fas fa-envelope"></i> Projectos</a>
 </nav>
 
 <section>
