--- a/aboutme.html
+++ b/aboutme.html
@@ -68,9 +68,10 @@
     <a href="projects.html"><i class="fas fa-envelope"></i> Projectos</a>
 </nav>
 
-<section>
+<section id="about">
     <h2>About Me</h2>
-    <p>This is a brief description of yourself. You can talk about your interests, skills, experiences, and anything else you'd like people to know about you.</p>
+    <p>Mi nombre es Dante Puddu, tengo 19 años y estudio Licenciatura en Informatica y Analista en tecnologias de la informacion y la comunicacion. Actualmente estoy en 2do año.
+</p>
 </section>
 
 <footer>
