--- a/index.html
+++ b/index.html
@@ -86,18 +86,10 @@
     <a href="projects.html"><i class="fas fa-envelope"></i> Projectos</a>
 </nav>
 
-<section id="about">
-    <h2>About Me</h2>
-    <p>Mi nombre es Dante Puddu, tengo 19 años y estudio Licenciatura en Informatica y Analista en tecnologias de la informacion y la comunicacion. Actualmente estoy en 2do año.
+<section id="contact">
+    <h2>Contact Me</h2>
+    <p>Podes encontrarme en:
 </p>
-</section>
-
-<section id="projectos">
-    <h2>Projectos</h2>
-    <img src="https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/images/10milJuegoSS.png" alt="Project Image" class="project-image">
-    <p>Juego de dados el cual se tiran 5 dados, los unicos dados que suman puntos son el 5 (50 puntos) y el 1 (100 puntos).
-        El primero de todos los jugadores que llegue a 10000 puntos gana el juego.</p>
-    <a href="https://daantesiito.github.io/10-mil-juego" class="btn">10 Mil Juego</a>
 </section>
 
 <footer>
