--- a/projects.html
+++ b/projects.html
@@ -68,20 +68,12 @@
     <a href="projects.html"><i class="fas fa-envelope"></i> Projectos</a>
 </nav>
 
-<section>
-    <h2>Projects</h2>
-    <p>This is where you can showcase your projects. You can provide brief descriptions, images, and links to the projects.</p>
-    <div class="project">
-        <h3>Project 1</h3>
-        <p>Description of project 1 goes here.</p>
-        <a href="#">Project 1 Link</a>
-    </div>
-    <div class="project">
-        <h3>Project 2</h3>
-        <p>Description of project 2 goes here.</p>
-        <a href="#">Project 2 Link</a>
-    </div>
-    <!-- Add more projects as needed -->
+<section id="projectos">
+    <h2>Projectos</h2>
+    <img src="https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/images/10milJuegoSS.png" alt="Project Image" class="project-image">
+    <p>Juego de dados el cual se tiran 5 dados, los unicos dados que suman puntos son el 5 (50 puntos) y el 1 (100 puntos).
+        El primero de todos los jugadores que llegue a 10000 puntos gana el juego.</p>
+    <a href="https://daantesiito.github.io/10-mil-juego" class="btn">10 Mil Juego</a>
 </section>
 
 <footer>
