--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 Dante's Beach Page. All rights reserved.</p>
+    <p>&copy; 2024 Dante's GitHub Page. All rights reserved.</p>
 </footer>
 
 </body>
