--- a/10-mil-juego/index.html
+++ b/10-mil-juego/index.html
@@ -24,6 +24,15 @@
                 color: #D43F52;
                 font-family: inherit; /* Inherit the font-family from the parent (body) */
             }
+            h5 {
+                text-align: center;
+                color: #ffffff;
+                font-weight: bold;
+                margin-bottom: 20px;
+                padding: 80px 0;
+                color: #D43F52;
+                font-family: inherit; /* Inherit the font-family from the parent (body) */
+            }
             .container {
                 max-width: 600px;
                 margin: 0 auto;
@@ -146,6 +155,8 @@
         document.getElementById("output").innerHTML = output;
     }
 </script>
+
+<h5>Made by: Dante Puddu</h5>
 
 </body>
 </html>
