--- a/index.html
+++ b/index.html
@@ -1,100 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dante's GitHub Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome for icons -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #def2f1; /* Light blue-green background */
-            color: #333; /* Dark text color */
-        }
-        header {
-            background-color: #1abc9c; /* Green header */
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-        }
-        header h1 {
-            font-size: 2.5em;
-            margin: 0;
-        }
-        nav {
-            background-color: #34495e; /* Dark blue navigation bar */
-            text-align: center;
-            padding: 10px 0;
-        }
-        nav a {
-            margin: 0 20px;
-            color: #fff;
-            text-decoration: none;
-            font-size: 1.2em;
-        }
-        section {
-            padding: 50px 0;
-            text-align: center;
-        }
-        section h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-            color: #2c3e50; /* Dark blue heading */
-        }
-        section p {
-            font-size: 1.1em;
-            line-height: 1.6;
-            color: #555; /* Dark gray text */
-        }
-        .project-image {
-            max-width: 100%;
-            margin-bottom: 20px;
-        }
-        .btn {
-            background-color: #3498db; /* Blue button color */
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 1em;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .btn:hover {
-            background-color: #2980b9; /* Darker blue on hover */
-        }
-        footer {
-            background-color: #2c3e50; /* Dark blue footer */
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-        }
-    </style>
-</head>
-<body>
+	<head>
+		<meta charset="utf-8">
 
-<header>
-    <h1>Welcome to Dante's GitHub Page!</h1>
-</header>
+		<title>Dante Puddu Personal WebPage</title>
+		<meta name="keywords" content="">
+		<meta name="description" content="">
+        <meta name="author" content="templatemo">
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<nav>
-    <a href="index.html"><i class="fas fa-home"></i> Home</a>
-    <a href="aboutme.html"><i class="fas fa-user"></i> About Me</a>
-    <a href="projects.html"><i class="fas fa-envelope"></i> Projectos</a>
-</nav>
+		<!-- animate -->
+		<link rel="stylesheet" href="css/animate.min.css">
+		<!-- bootstrap -->
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<!-- font-awesome -->
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<!-- google font -->
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,800' rel='stylesheet' type='text/css'>
+		<!-- fullpage -->
+		<link rel="stylesheet" href="css/jquery.fullPage.css">
+		<!-- custom -->
+		<link rel="stylesheet" href="css/templatemo-style.css">
 
-<section id="contact">
-    <h2>Contact Me</h2>
-    <p>Podes encontrarme en:
-</p>
-</section>
+	</head>
+	<body>
 
-<footer>
-    <p>&copy; 2024 Dante's GitHub Page. All rights reserved.</p>
-</footer>
+	<div id="fullpage">
+		<!-- start home -->
+		<div id="home" class="section">
+			<div class="photo-container">
+				<img src="E:\importante\GITHUB\Personal Webpage\daantesiito.github.io\images\fondo.jpg" class="background-photo" alt="Background Photo">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-2"></div>
+						<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
+							<div class="h1-name">
+								<h1 class="main-heading">Dante Puddu</h1>
+							</div>
+							<h2 class="rotate">ETHICAL HACKER, PROGRAMMER</h2>
+							<h4>Estudiante de Licenciatura en Informatica en la UNLP.</h4>
+							<h4>Ethical Hacker autodidacta.</h4>
+							<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
+						</div>
+						<div class="col-md-2"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end home -->
 
-</body>
+
+		<!-- start work -->
+		<div id="work" class="section">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 wow bounce">
+						<h2>WHAT I DO</h2>
+					</div>
+                </div>  
+                <div class="row">
+					<div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+						<div class="media">
+							<div class="media-object media-left">
+								<i class="fa fa-laptop"></i>
+							</div>
+							<div class="media-body">
+								<h3 class="media-heading">Pentester</h3>
+								<p>Pentester practicando en Hack the Box.</p>
+							</div>
+						</div>
+					</div>
+					<!--
+					<div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+						<div class="media">
+							<div class="media-object media-left">
+								<i class="fa fa-laptop"></i>
+							</div>
+							<div class="media-body">
+								<h3 class="media-heading">Pentester</h3>
+								<p>Pentester practicando en Hack the Box.</p>
+							</div>
+						</div>
+					</div>
+					-->
+				</div>
+			</div>
+		</div>
+		<!-- end work -->
+
+		<!-- start about -->
+		<div id="about" class="section">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
+						<h2>ABOUT ME</h2>
+						<h4>ETHICAL HACKER &AMP; PROGRAMMER</h4>
+						<p>Mi nombre es Dante Puddu y tengo 19 años. Actualmente estoy en 2do año de Licenciatura en Informatica en la UNLP.</p>
+						<p>A la vez que estudio, hago cursos de ethical hacking y practico en maquinas de Hack The Box (Rank Script Kiddie).</p>
+						<p>Cuento con experiencia en redes sociales ya que tengo una cuenta con 1,1 Millones de seguidores dedicada al Jetski.</p>
+					</div>
+					<!-- BARRAS DE PROGRESO
+					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s">
+						<span class="text-top">Web Design <small>95%</small></span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
+							</div>
+						<span>Mobile Apps <small>80%</small></span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+							</div>
+						<span>SEO Stuffs <small>70%</small></span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+							</div>
+						<span>HTLM5 &AMP; CSS3 <small>90%</small></span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+							</div>
+					-->
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end about -->
+
+		<!-- start portfolio -->
+		<div id="portfolio" class="section">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h2 class="wow bounce">Mis Proyectos</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
+						<div class="portfolio-thumb">
+							<a href="https://daantesiito.github.io/10-mil-juego">
+								<img src="https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/images/10milJuegoSS.png" class="img-responsive" alt="portfolio img">
+								<div class="portfolio-overlay">
+									<h4>Juego</h4>
+									<h5>10 mil</h5>
+								</div>
+							</a>
+						</div>
+					</div>
+					<!-- Add more col-md-4 divs for additional portfolio -->
+				</div>
+			</div>
+		</div>
+		<!-- end portfolio -->
+
+		<!-- start htb -->
+		<div id="htb" class="section">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h2 class="wow bounce">Hack The Box - Write Ups</h2>
+						<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
+							<div class="htb-thumb-easy">
+								<!-- <a href="https://daantesiito.github.io/10-mil-juego"> -->
+									<img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/HTB/Knife%20Easy.png?raw=true" class="img-responsive" alt="htb img">
+									<div class="htb-overlay-easy">
+										<h4>Knife</h4>
+										<h5>Difficulty: Easy</h5>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end htb -->
+
+
+
+		<!-- start contact -->
+		<div id="contact" class="section">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-0 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+						<address>
+							<p class="contact-title">CONTACT ME</p>
+							<p><i class="fa fa-envelope-o"></i> adantepuddu@gmail.com</p>
+							<p><i class="fa fa-instagram"></i> @dante_puddu<a href="https://instagram.com/dante_puddu" class="btn"> (Link)</a></p>
+							<p><i class="fa fa-laptop"></i> github.com/daantesiito<a href="https://github.com/daantesiito" class="btn"> (Link)</a></p>
+						</address>
+					</div>
+					<!--
+					<div class="col-lg-5 col-md-6 col-xs-12 wow fadeInUp" data-wow-delay="0.6s">
+						<form role="form" method="post" action="#">
+							<input name="name" type="text" class="form-control" id="name" placeholder="Your Name">
+							<input name="email" type="email" class="form-control" id="email" placeholder="Your Email">
+							<textarea name="message" rows="5" class="form-control" id="message" placeholder="Your Message"></textarea>
+							<input name="send" type="submit" class="form-control" id="send" value="SEND ME">
+						</form>
+					</div>
+					-->
+				</div>
+			</div>
+		</div>
+		<!-- end contact -->
+
+		<!-- start footer -->
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
+						<p>Copyright &copy; 2024 Dante Puddu Personal WebPage 
+                        
+                        . Designed by <a rel="nofollow noopener" href="https://github.com/daantesiito">Dante Puddu</a></p>
+						<hr>
+						<ul class="social-icon">
+							<li><a href="https://instagram.com/dante_puddu" class="fa fa-instagram"></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<!-- end footer -->
+
+	</div>
+
+		<!-- jQuery -->
+		<script src="js/jquery.js"></script>
+		<!-- bootstrap -->
+		<script src="js/bootstrap.min.js"></script>
+		<!-- fullpage -->
+		<script src="js/jquery.fullPage.js"></script>
+		<!-- smoothScroll -->
+		<script src="js/smoothscroll.js"></script>
+		<!-- wow -->
+		<script src="js/wow.min.js"></script>
+		<!-- text rotater -->
+		<script src="js/jquery.simple-text-rotator.js"></script>
+		<!-- custom -->
+		<script src="js/custom.js"></script>
+
+	</body>
 </html>
