--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<!-- start home -->
 		<div id="home" class="section">
 			<div class="photo-container">
-				<img src="E:\importante\GITHUB\Personal Webpage\daantesiito.github.io\images\fondo.jpg" class="background-photo" alt="Background Photo">
+				<img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/fondo.JPG?raw=true" class="background-photo" alt="Background Photo">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2"></div>
@@ -138,7 +138,7 @@
 					<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 						<div class="portfolio-thumb">
 							<a href="https://daantesiito.github.io/10-mil-juego">
-								<img src="https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/images/10milJuegoSS.png" class="img-responsive" alt="portfolio img">
+								<img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/My%20Projects/10milJuegoSS.png?raw=true" class="img-responsive" alt="portfolio img">
 								<div class="portfolio-overlay">
 									<h4>Juego</h4>
 									<h5>10 mil</h5>
