--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<link rel="stylesheet" href="css/jquery.fullPage.css">
 		<!-- custom -->
 		<link rel="stylesheet" href="css/templatemo-style.css">
+		<!-- Raleway Font -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap">
 
 	</head>
 	<body>
