--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -71,12 +71,65 @@
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>Juan Pérez</td>
-                                    <td>1 hora</td>
+                                    <td>Celso Gimenez</td>
+                                    <td>1:47.095</td>
                                     <td>2024-04-12</td>
-                                    <td><a href="#">Enlace</a></td>
+                                    <td><a href="https://youtu.be/n7hHz6w_LN8">Video</a></td>
                                 </tr>
-                                <!-- Puedes agregar más filas según sea necesario -->
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Santino Puddu</td>
+                                    <td>1:47.251</td>
+                                    <td>2024-04-12</td>
+                                    <td><a href="https://youtu.be/_Q4Kf5hro3o">Video</a></td>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Octavio Torres</td>
+                                    <td>1:48.911</td>
+                                    <td>2024-04-12</td>
+                                    <td><a href="https://youtu.be/cNloGQKrv2U">Video</a></td>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Bautista Ferraro</td>
+                                    <td>1:49.221</td>
+                                    <td>2024-04-12</td>
+                                    <td><a href="https://youtu.be/dror6nJ7NKI">Video</a></td>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Tomas Zorzoli</td>
+                                    <td>1:50.980</td>
+                                    <td>2024-04-12</td>
+                                    <td><a href="https://youtu.be/zFHKqCPSlIU">Video</a></td>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Santiago Caporale</td>
+                                    <td>1:57.615</td>
+                                    <td>2024-04-12</td>
+                                    <td><a href="https://youtu.be/X3huypVyeOU">Video</a></td>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <td>7</td>
+                                    <td>Giuliana Montecalvo</td>
+                                    <td>2:08.587</td>
+                                    <td>2024-04-12</td>
+                                    <td><a href="https://youtu.be/Dy6DoEXORh4">Video</a></td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -87,6 +140,6 @@
 </div>
 
 <script src="js/bootstrap.min.js"></script>
-<!-- Agrega cualquier otro JavaScript necesario -->
+<!-- Agregar otro JavaScript necesario -->
 </body>
 </html>
